Volunteer: Updated responsiveness and fixed sections
Added form section, fixed background blur section
so that it no longer overlaps with footer.

L=ENG-381

TEST=manual
Worked locally

--- a/js/src/patina/pages/volunteer/Volunteer.module.css
+++ b/js/src/patina/pages/volunteer/Volunteer.module.css
@@ -1,40 +1,34 @@
-/* Initial hero section */
-.wrapper {
-  position: relative;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  gap: 24px;
-}
-
-.text {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  gap: 24px;
+.heroContainer {
+  @media (max-width: rem(996px)) {
+    margin: rem(16px);
+  }
 }
 
 .title {
-  color: light-dark(var(--mantine-color-black), var(--mantine-color-white));
-  font-size: rem(70px);
-  letter-spacing: rem(-2px);
-
-  @media (max-width: $mantine-breakpoint-md) {
-    font-size: rem(50px);
-  }
+  font-size: 64px;
+  color: white;
 }
 
 .description {
-  color: light-dark(var(--mantine-color-black), var(--mantine-color-white));
-  font-size: rem(22px);
+  text-align: left;
+  padding-top: rem(10px);
+  font-size: 24px;
+  color: white;
+}
 
-  @media (max-width: $mantine-breakpoint-md) {
-    font-size: rem(15px);
+.volunteerHero {
+  height: rem(500px);
+  width: rem(597px);
+
+  @media (max-width: rem(996px)) {
+    width: 100%;
+    margin: 0;
   }
 }
 
-.volunteerImg {
-  width: 40%;
+.colored {
+  text-decoration: underline var(--mantine-color-patina-blue-light);
+  color: var(--mantine-color-patina-blue-light);
 }
 
 /* Volunteer Cards */
@@ -50,7 +44,9 @@
   flex-direction: column;
   align-items: center;
   overflow: hidden;
-  padding-bottom: rem(32px);
+  height: auto;
+  width: 100%;
+  padding-bottom: 25px;
 }
 
 .backgroundBlur {
@@ -59,6 +55,7 @@
   border-radius: 20px;
   background: rgba(255, 61, 61, 0.2);
   filter: blur(100px);
+  overflow: hidden;
   position: absolute;
   z-index: 0;
 }
@@ -70,6 +67,7 @@
   z-index: 1;
   position: relative;
   width: 100%;
+  background-image: radial-gradient(#ff3d3d33 0%, #1a1b1e 65%);
 }
 
 .emailText {
